# ssh-drop

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
config/: ssh-drop.conf
deploy/: ssh-drop-restart.service  ssh-drop-restart.timer  ssh-drop.service
src/: CMakeLists.txt  authenticator.cpp  authenticator.h  authenticator.hpp  config_parser.cpp  config_parser.h  config_parser.hpp  connection_handler.cpp  connection_handler.h  connection_handler.hpp  crypto.cpp  crypto.h  crypto.hpp  drop_server.cpp  drop_server.h  drop_server.hpp  encrypt_command.cpp  encrypt_command.h  encrypt_command.hpp  log.cpp  log.h  log.hpp  main.cpp  secret_provider.cpp  secret_provider.h  secret_provider.hpp  server_config.cpp  server_config.h  server_config.hpp  signal_guard.cpp  signal_guard.h  signal_guard.hpp  ssh_error.h  ssh_error.hpp  ssh_lib_guard.h  ssh_lib_guard.hpp  ssh_types.cpp  ssh_types.h  ssh_types.hpp
